[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/StompChecker.gd" type="Script" id=1]
[ext_resource path="res://Player/StateMachine/States/Air.gd" type="Script" id=2]
[ext_resource path="res://Player/StateMachine/States/Ground.gd" type="Script" id=3]
[ext_resource path="res://Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Player/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Player/StateMachine/States/Dash.gd" type="Script" id=6]
[ext_resource path="res://16by16test.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )
min_jump_height = 2.0
time_to_dash_distance = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4.76837e-07, 2.38419e-07 )
frames = SubResource( 2 )
animation = "Idle"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Ground")

[node name="Ground" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="StompChecker" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="VerticalCasts" type="Node2D" parent="StompChecker"]

[node name="DownCast1" type="RayCast2D" parent="StompChecker/VerticalCasts"]
position = Vector2( -8, 8 )
cast_to = Vector2( 0, 10 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="DownCast2" type="RayCast2D" parent="StompChecker/VerticalCasts"]
position = Vector2( 0, 8 )
cast_to = Vector2( 0, 10 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="DownCast3" type="RayCast2D" parent="StompChecker/VerticalCasts"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 10 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="HorizontalCasts" type="Node2D" parent="StompChecker"]

[node name="RightCast" type="RayCast2D" parent="StompChecker/HorizontalCasts"]
position = Vector2( 8, 8 )
cast_to = Vector2( 10, 0 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="LeftCast" type="RayCast2D" parent="StompChecker/HorizontalCasts"]
position = Vector2( -8, 8 )
cast_to = Vector2( -10, 0 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false
